CSS beginning stages. Must troubleshoot properties to finish aligning with demo.

--- a/week2-hw/index.html
+++ b/week2-hw/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/styles.css"
-    <title>To Know David Harris</title>
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <title>David's Profile</title>
 </head>
 
 <body>
@@ -13,23 +13,74 @@
         <section>
             <ul>
                 <li>
-                    <a href="about-me">About Me</a>
+                    <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    <a href="work">Work</a>
+                    <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="contact-me">Contact Me</a>
+                    <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="resume">Resume</a>
+                    <a href="#resume">Resume</a>
                 </li>
             </ul>
         </section>
     </header>
+
+    <section6 id="subtitle" class="subtitle">
+        <h2>Cool Subtitle here</h2>
+    </section6>
+        
+        
+    <section2 id="history" class="#history">
+        <h2>About Me</h2>
+        <p>
+            This is where my about me description shall go
+        </p>
+    </section2>
+
+    <section3 id="grind" class="#grind">
+        <h2>Work</h2>
+        <ul>
+            <li>
+                <a href="#surf-report">Surf Report</a>
+            </li>
+            <li>
+                <a href="#led-wall">LED Wall</a>
+            </li>
+            <li>
+                <a href="#calculator">Calculator</a>
+            </li>
+            <li>
+                <a href="#pastel-puzzles">Pastel Puzzles</a>
+            </li>
+            <li>
+                <a href="#run-body">Run Body</a>
+            </li>
+        </ul>
+    </section3>
+
+    <footer id="contact" class="#contact">
+        <h2>Contact Me</h2>
+        <ul>
+            <li>
+                <a href="#cell-phone">954-479-2809</a>
+            </li>
+            <li>
+                <a href="#email">harris5931@hotmail.com</a>
+            </li>
+            <li>
+                <a href="#github">Github</a>
+            </li>
+            <li>
+                <a href="#twitter">Twitter</a>
+            </li>
+            <li>
+                <a href="#spotify">Spotify</a>
+            </li>
+        </ul>
+    </footer>
 </body>
-<div class="subtitle"></div>
-<div class="main">
-    <div class=""
-</div>
+
 </html>
