Further implentation during lunch break to the HTML and CSS. Added divs in to try to break the sections up into more fluid components.

--- a/week2-hw/index.html
+++ b/week2-hw/index.html
@@ -28,19 +28,21 @@
         </section>
     </header>
 
-    <section6 id="subtitle" class="subtitle">
-        <h2>Cool Subtitle here</h2>
-    </section6>
-        
+    <div class="subtitle">
+        <div class="subtitle"></div>
+            <h2>Cool Subtitle here</h2>
+        </div>
+    </div>
         
     <section2 id="history" class="#history">
         <h2>About Me</h2>
         <p>
-            This is where my about me description shall go
+            David Harris is a South Florida resident that recently started his career in the coding field. He's currently attending University of Miami's Full Stack Devolpment Bootcamp. Prior to his interest in a career change, David is a local DJ and Bartender to his community for over 10 years. His passion for excellent customer service is what gives him the assurance that the coding environment is for him. To be able to create illustrious webpages and designs to seeing the positive and glorious responses from customers, is the thing that would bring him the greatest benefit. 
         </p>
     </section2>
 
     <section3 id="grind" class="#grind">
+        <img src=""
         <h2>Work</h2>
         <ul>
             <li>
