--- a/week2-hw/index.html
+++ b/week2-hw/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <header class="nameplate">
+    <div class="nameplate">
         <h1>To know <span class="david-harris">David Harris</span></h1>
-        <section>
+        <div>
             <ul>
                 <li>
                     <a href="#about-me">About Me</a>
@@ -19,49 +19,45 @@
                     <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="#contact-me">Contact Me</a>
-                </li>
-                <li>
                     <a href="#resume">Resume</a>
                 </li>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
             </ul>
-        </section>
-    </header>
-
+        </div>
+    </div>
     <div class="subtitle">
-        <div class="subtitle"></div>
+        <div class="subtitle">
             <h2>Cool Subtitle here</h2>
         </div>
     </div>
         
-    <section2 id="history" class="#history">
+    <div section2 id="history" class="#history">
         <h2>About Me</h2>
         <p>
             David Harris is a South Florida resident that recently started his career in the coding field. He's currently attending University of Miami's Full Stack Devolpment Bootcamp. Prior to his interest in a career change, David is a local DJ and Bartender to his community for over 10 years. His passion for excellent customer service is what gives him the assurance that the coding environment is for him. To be able to create illustrious webpages and designs to seeing the positive and glorious responses from customers, is the thing that would bring him the greatest benefit. 
         </p>
-    </section2>
+    </div section2>
 
-    <section3 id="grind" class="#grind">
-        <img src=""
-        <h2>Work</h2>
-        <ul>
-            <li>
-                <a href="#surf-report">Surf Report</a>
-            </li>
-            <li>
-                <a href="#led-wall">LED Wall</a>
-            </li>
-            <li>
-                <a href="#calculator">Calculator</a>
-            </li>
-            <li>
-                <a href="#pastel-puzzles">Pastel Puzzles</a>
-            </li>
-            <li>
-                <a href="#run-body">Run Body</a>
-            </li>
-        </ul>
-    </section3>
+    <div class="tiles">
+        <button class="about-me">
+            <img src="">
+            <h3>About Me</h3>
+        </button>
+        <button id="work" class="work">
+            <img src="assets/Screenshot 2023-04-06 233233.png">
+            <h3>Work</h3>
+        </button>
+        <button id="resume" class="resume">
+            <img src="">
+            <h3>Resume</h3>
+        </button>
+        <button class="contact-me">
+            <img src="">
+            <h3>Contact Me</h3>
+        </button>
+    </div>
 
     <footer id="contact" class="#contact">
         <h2>Contact Me</h2>
