Added team project to portfolio

--- a/week2-hw/index.html
+++ b/week2-hw/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/styles.css">
     <title>David's Profile</title>
+    <link rel="calendar project" href="https://github.com/JuanSanchez39/DayToDay-Calendar">
 </head>
 
 <body>
