Added Team project (DayToDay-Calendar)

--- a/week2-hw/index.html
+++ b/week2-hw/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/styles.css">
     <title>David's Profile</title>
-    <link rel="calendar project" href="https://github.com/JuanSanchez39/DayToDay-Calendar">
 </head>
 
 <body>
@@ -14,7 +13,7 @@
         <h1>To know <span class="david-harris">David Harris</span></h1>
         <ul>
             <li>
-                <a href="#work">Work</a>
+                <a href="https://github.com/JuanSanchez39/DayToDay-Calendar.git">DayToDay-Calendar</a>
             </li>
             <li>
                 <a href="#resume">Resume</a>
