Added work to Work Section

--- a/week2-hw/index.html
+++ b/week2-hw/index.html
@@ -13,7 +13,7 @@
         <h1>To know <span class="david-harris">David Harris</span></h1>
         <ul>
             <li>
-                <a href="https://github.com/JuanSanchez39/DayToDay-Calendar.git">DayToDay-Calendar</a>
+                <a href="#work">Work</a>
             </li>
             <li>
                 <a href="#resume">Resume</a>
@@ -39,6 +39,7 @@
     <div main class="tiles">
         <button id="work" class="work">
             <img src="./assets/Work.jpg">
+            <a href="https://github.com/JuanSanchez39/DayToDay-Calendar.git">DayToDay-Calendar</a>
             <h3>Work</h3>
         </button>
         <button id="resume" class="resume">
